# DocToMood

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.example.yml  pyproject.toml  requirements.txt
doctomood/: __init__.py  gui.py  ioutils.py  main.py  process.py
packaging/: BUILD.md  README.md  get_build_info.py  requirements-build.txt
packaging/linux/: build.sh
packaging/macos/: build.sh
packaging/pyinstaller/: doctomood_gui.spec
packaging/pyinstaller/hooks/: hook-docx.py
packaging/windows/: build.ps1
questiondb/: main.py  process.py
src/doctomood/: ioutils.py  main.py  parser.py
